# wsapi-client-test

template-test/: Cargo.toml  address.json  businesscard.json  page.json
template-test/src/: main.rs
wsapi-client-test/: Cargo.toml  config.yml
wsapi-client-test/src/: main.rs
wsapi-server-rocket/: Cargo.toml  config.yml
wsapi-server-rocket/src/: main.rs
wsapi-server-test/: Cargo.toml  config.yml
wsapi-server-test/src/: main.rs
