[package]
name = "wsapi-client-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.35"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
hyper = { version = "1.0.0-rc.3", features = ["client"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"